--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       <div class="lightbox__overlay"></div>
 
       <div class="lightbox__content">
+        <button type="button" class="lightbox__prev__button" data-action="prev-lightbox"></button>
         <img class="lightbox__image" src="" alt="" />
+        <button type="button" class="lightbox__next__button" data-action="next-lightbox"></button>
       </div>
 
       <button
@@ -32,6 +34,7 @@
     </div>
 
     <script src="gallery-items.js" type="module"></script>
-    <script src="main.js" type="module"></script>
+    <script src="main-1.js" type="module"></script>
+    <!--<script src="main.js" type="module"></script>-->
   </body>
 </html>
