--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <div class="lightbox__overlay"></div>
 
       <div class="lightbox__content">
-        <!--<button type="button" class="lightbox__prev__button" data-action="prev-lightbox"></button>-->
+        <button type="button" class="lightbox__prev__button" data-action="prev-lightbox"></button>
         <img class="lightbox__image" src="" alt="" />
-        <!--<button type="button" class="lightbox__next__button" data-action="next-lightbox"></button>-->
+        <button type="button" class="lightbox__next__button" data-action="next-lightbox"></button>
       </div>
 
       <button
@@ -32,7 +32,6 @@
         data-action="close-lightbox"
       ></button>
     </div>
-
     <script src="gallery-items.js" type="module"></script>
     <script src="main-1.js" type="module"></script>
     <!--<script src="main.js" type="module"></script>-->
